# AIPersona-demo

./: .dockerignore  .env.compose.example  .env.example  .env.stage.example  .gitignore  DESIGN.md  README.md  docker-compose.stage.yml  docker-compose.yml  findings.md  handoff.md  package.json  pnpm-lock.yaml  progress.md  task_plan.md
.playwright-cli/: page-2026-04-03T03-14-37-984Z.yml  page-2026-04-03T03-15-12-638Z.yml  page-2026-04-03T03-15-24-047Z.yml  page-2026-04-03T03-17-03-534Z.yml  page-2026-04-03T03-24-31-284Z.yml  page-2026-04-03T03-24-42-933Z.yml  page-2026-04-03T03-27-47-108Z.yml  page-2026-04-03T03-38-19-868Z.yml
apps/api/: pyproject.toml
apps/api/src/aipersona_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/api/: __init__.py  auth_routes.py  health.py  router.py
apps/api/src/app/core/: __init__.py  auth.py  config.py  errors.py  logging.py
apps/api/src/app/study_runtime/: __init__.py  gateway.py  projections.py  repository.py  routes.py  seed_pack.py  service.py  streaming.py
apps/api/tests/: conftest.py  test_api_app.py  test_auth_routes.py  test_mvp_catalog_routes.py  test_seed_pack.py  test_study_access_routes.py  test_study_runtime_service.py  test_workbench_projection.py  test_worker_failure.py  test_worker_graph_builder.py  test_worker_graph_runner.py  test_worker_llm.py
apps/mcp/: README.md  pyproject.toml
apps/mcp/src/aipersona_mcp/: __main__.py  server.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/worker/: pyproject.toml
apps/worker/src/aipersona_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/src/worker/: __init__.py  agent.py  config.py  llm.py  main.py  personas.py
apps/worker/src/worker/activities/: __init__.py  study_runtime.py
apps/worker/src/worker/graph/: __init__.py  builder.py  edges.py  failure.py  nodes.py  runner.py  state.py
apps/worker/src/worker/workflows/: __init__.py  study_workflow.py
docker/: node-dev.Dockerfile  node-stage.Dockerfile  python-dev.Dockerfile  python-stage.Dockerfile
docs/: AIpersona-Frontend-UX-Full-Audit-2026-04-12.md  AIpersona-Product-UX-Audit-2026-04-12.md  development-plan-full-atypica-parity.md  frontend-full-audit-20260412.md  gap-checklist-vs-atypica.md  handoff.md  iteration-plan-agent-driven.md  iteration-plan-v2-atypica-gap.md  user-journey-audit.md  ux-review-20260412.md
scripts/: db-migrate.sh  dev-api.sh  dev-worker.sh  docker-compose.sh  docker-db-migrate.sh  remote-dev-bootstrap.sh  remote-dev-stop.sh  remote-temporal-down.sh  remote-temporal-up.sh  remote_temporal_down.py  remote_temporal_up.py
(+113 files in other folders)
