[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipersona-api"
version = "0.1.0"
description = "FastAPI runtime entry for the AIpersona demo"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "temporalio>=1.0,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
  "openai>=1.0,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
