[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipersona-mcp"
version = "0.1.0"
description = "MCP Server exposing AIpersona research tools for external AI agents"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.0,<3.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
