[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipersona-worker"
version = "0.1.0"
description = "Temporal worker runtime entry for the AIpersona demo"
requires-python = ">=3.9"
dependencies = [
  "psycopg[binary]>=3.2,<4.0",
  "temporalio>=1.0,<2.0",
  "openai>=1.0,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
