[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipersona-worker"
version = "0.1.0"
description = "LangGraph research agent worker for AIpersona"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2,<4.0",
  "openai>=1.0,<2.0",
  "langgraph>=0.4",
  "langgraph-checkpoint-postgres>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
